--- a/src/index.css
+++ b/src/index.css
@@ -20,12 +20,39 @@
 
 
 .header{
-    font-size: 5rem;
     background-color: #08998f;
     color: white;
     padding: 1rem;
     text-align: center;
     grid-area: header;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-weight: bold;
+}
+
+.header-library{
+    font-size: 3rem;
+    letter-spacing: 3px;
+}
+
+.header-fav{
+    position: relative;
+    font-size: 2rem;
+    display: flex;
+    align-items: center;
+}
+
+.cart{
+    font-size: 3rem;
+}
+
+.header-fav-count{
+    position: absolute;
+    right: 16.5px;
+    top: -1.5px;
+    font-size: 2rem;
+    color: goldenrod;
 }
 
 .sidebar{
@@ -78,7 +105,7 @@
 
 .content-grid{
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+    grid-template-columns: repeat(auto-fill,minmax(250px,1fr));
     grid-auto-rows:minmax(250px,auto);
     gap: 10px;
     word-break: break-all;
@@ -93,6 +120,7 @@
     gap: 10px;
     color: black;
     background-color: #f2f1f6 ;
+    border: 3px solid black;
 }
 
 .card .title{
@@ -182,4 +210,20 @@ a{
 label{
     font-size: 2rem;
     font-weight: bold;
+}
+
+button{
+    border: none;
+    padding: 5px;
+    border-radius: 5px;
+    font-weight: bold;
+    background-color: #f2f1f6 ;
+    cursor: pointer;
+    font-size: 2rem;
+}
+.preview-heart{
+    display: flex;
+    justify-content: space-between;
+    gap: 15px;
+    align-items: center;
 }
