--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
 .container{
     display: grid;
     grid-template-columns:250px auto;
-    grid-template-rows: 55px;
+    grid-template-rows: 55px 60px auto;
     grid-template-areas: 
         "header header"
         "sidebar main"
@@ -226,4 +226,24 @@ button{
     justify-content: space-between;
     gap: 15px;
     align-items: center;
+}
+
+
+.favorite-content{
+    border-left:1px solid black ;
+    background-color: #285754;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+}
+
+
+.favorite-remove{
+    background-color: red;
+    color:white;
+    font-size: 1.2rem;
+}
+
+.no-favorite{
+    text-align: center;
 }
