--- a/src/index.css
+++ b/src/index.css
@@ -121,6 +121,11 @@
     color: black;
     background-color: #f2f1f6 ;
     border: 3px solid black;
+
+}
+
+.card:hover{
+    box-shadow: 4px 4px 0 rgba(0,0,0,2);
 }
 
 .card .title{
@@ -244,6 +249,19 @@ button{
     font-size: 1.2rem;
 }
 
+.btn{
+    background-color: green;
+    color:white;
+    font-size: 1.2rem;
+}
+
 .no-favorite{
     text-align: center;
+}
+
+.header-feature{
+    font-size: 3.2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
